--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "smnp-js",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.17.1",
-    "net-snmp": "^2.9.8",
-    "socket.io": "^3.0.3"
-  }
+    "name": "smnp-js",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "node index.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "express": "^4.17.1",
+        "net-snmp": "^2.9.8",
+        "socket.io": "^3.0.3"
+    }
 }
