--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "express": "^4.17.1",
         "net-snmp": "^2.9.8",
+        "nodemon": "^2.0.6",
         "socket.io": "^3.0.3"
     }
 }
