--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "license": "ISC",
     "dependencies": {
         "express": "^4.17.1",
-        "net-snmp": "^2.9.8",
+        "net-snmp": "^3.4.1",
+        "node-rsa": "^1.1.1",
         "nodemon": "^2.0.6",
-        "socket.io": "^3.0.3"
+        "socket.io": "^3.1.0"
     }
 }
